--- a/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
+++ b/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
