add item serialization.

--- a/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
+++ b/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Templates\CSharpCode.liquid" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -17,5 +18,7 @@
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.2" />
   </ItemGroup>
+
+  <ItemGroup />
 
 </Project>
