--- a/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
+++ b/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.fsproj
@@ -6,12 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Templates\CSharpCode.liquid" />
+    <None Include="Templates\CSharpCode.liquid">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="DotLiquid" Version="2.0.361" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
