--- a/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.New/CodeGeneration.Selenium.App.New.csproj
+++ b/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.New/CodeGeneration.Selenium.App.New.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,25 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Templates\CSharpCode.liquid">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <Compile Include="Program.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
-    <PackageReference Include="DotLiquid" Version="2.0.361" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CodeGeneration.Selenium.Models\CodeGeneration.Selenium.Models.csproj" />
-    <ProjectReference Include="..\CodeGeneration.Selenium\CodeGeneration.Selenium.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.7.2" />
+    <None Update="Templates\CSharpCode.liquid">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
